--- a/index.html
+++ b/index.html
@@ -144,9 +144,39 @@
                 <h2 class="title-heading">About</h2>
                 <p class="title-slogan">Less is more work</p>
             </div>
+            <div class="about-grid">
+                <div class="about-photo">
+                    <img src="./images/about.jpg" alt="">
+                </div>
+                <p class="highlighted-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo
+                    neque voluptate tempora velit cum non, fuga vitae architecto delectus sed maxime rerum impedit
+                    aliquam obcaecati, aut excepturi iusto laudantium!
+                </p>
+                <p class="normal-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sapiente.
+                    Velit iure exercitationem dolores nesciunt dolore. Eum officiis dolorum hic voluptate quaerat
+                    minima, similique inventore esse, alias, sed quo officia?
+                </p>
+            </div>
         </div>
     </div>
+    <div class="contact">
+        <div class="container">
+            <div class="contact-title">
+                <h2 class="title-heading">Contact</h2>
+                <p class="title-slogan">We are born to create</p>
+            </div>
+            <div class="contact-content">
+                <h1 class="navy-h1"> Feel free to drop us a line at:</h1>
+                <h1><a href="#" class="mail">Leonagency@mail.com</a></h1>
+                <p class="networks">Find Us On Social Networks<i class="fab fa-youtube social-icon"></i>
+                    <i class="fab fa-facebook-f social-icon"></i>
+                    <i class="fab fa-twitter social-icon"></i>
+                </p>
 
+            </div>
+        </div>
+    </div>
+    <div class="footer">© 2021 <div class=" Leon-color ">Leon</div> All Right Reserved</div>
 </body>
 
 </html>
