--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Main css file-->
-    <link rel="stylesheet" href="css/Leon.css">
+    <link rel="stylesheet" href="/Leon.css">
     <!-- Nomalize and render all elements-->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- font awesome -->
